[project]
name = "moonbunny"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic-settings>=2.10.1",
    "textual-dev>=1.7.0",
    "textual[syntax]>=4.0.0",
    "watchfiles>=1.1.0",
    "xdg-base-dirs>=6.0.2",
]

[tool.uv]
package = true

[project.scripts]
moonbunny = "moonbunny.main:main"
